# PatchParserCPP

./: PatchParser.hpp  README.md
Test/: CMakeLists.txt  Test.sh
Test/UnitTest/: PatchParse1.cpp  PatchParserTest.cpp
Test/UnitTest/TestPatches/: OneFileOneChunkPatch.txt  OneFileTwoChunksPatch.txt  TwoFileTwoChunkPatch.txt
include/PatchParserCPP/: PatchParser.hpp
patch_parser_cpp/: patch_parser.hpp
